2012-01-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4 (KPSE_SETUP): Normalize `enable_largefile'.

2012-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-poppler-flags.m4: Drop `-DPDF_PARSER_ONLY'.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-web2c.m4: Modify msgs when setting enable_*TeX_synctex.

2011-08-26  Karl Berry  <karl@tug.org>

	* kpse-pkgs.m4 (KPSE_UTILS_PKGS): rm dialog.
	See comments in texk/tetex/ChangeLog.

2011-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-lib-version.m4 (new): Split FOO_version into FOO_major,
	FOO_minor, and FOO_micro; build FOO_LT_VERSINFO.

2011-07-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-xpdf-flags.m4: Require system (poppler) version >= 0.12.
	* kpse-poppler-flags.m4: Fixed a typo.
	* README: Updated.

	* kpse-warnings.m4 [WARNING_CXXFLAGS, WARNING_OBJCXXFLAGS]:
	For g++ always use either -Wno-write-strings or -Wwrite-strings
	because the default for C++ has changed with gcc-4.4.

	* kpse-web2c.m4: Added configure options `--enable-*-synctex',
	moved handling of `--enable-mktex*-default' from here ...
	* kpse-mktex.m4: ... to this new file.
	* kpse-setup.m4: Added KPSE_MKTEX_PREPARE.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-common.m4 (KPSE_COMMON): Remove check for
	program_invocation_name.

2010-04-11  Karl Berry  <karl@tug.org>

	* kpse-pkgs.m4 (KPSE_TEXK_PKGS): add ptexenc, makejvf, mendexk.
	From Akira and Norbert.
	* kpse-ptexenc-flags.m4: new file.

2010-03-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-icu-flags.m4 (KPSE_ICU_SYSTEM_FLAGS): Work around bug
	in icu-config version 4.4.
	* kpse-common.m4 (KPSE_COMMON): Added AC_TYPE_SIZE_T.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-common.m4 (KPSE_COMMON): Use LT_INIT([win32-dll]).
	* kpse-gd-flags.m4 (KPSE_GD_FLAGS): Add -DNONDLL.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-kpathsea-flags.m4: Detect if libkpathsea was compiled