@@ -1,3 +1,7 @@
+2012-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-warnings.m4: Drop `-Wimplicit' for g++ >= 4.6.
+
 2012-01-16  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-setup.m4 (KPSE_SETUP): Normalize `enable_largefile'.
